--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	<dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,10 +51,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.ai/spring-ai-spring-boot-autoconfigure -->
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
+			<artifactId>spring-ai-spring-boot-autoconfigure</artifactId>
+			<version>1.0.0-M5</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
@@ -64,7 +67,6 @@
 			<scope>import</scope>
 		</dependency>
 	</dependencies>
-	</dependencyManagement>
 
 	<repositories>
 		<repository>
