adjusted to use reload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-bean-definition-overriding=true
-
+spring.devtools.livereload.enabled=true
 spring.ai.ollama.base-url=http://localhost:11434/
