added open AI configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-bean-definition-overriding=true
 spring.devtools.livereload.enabled=true
+spring.ai.openai.api-key =${OPEN_AI_API_KEY}
+
 spring.ai.ollama.base-url=http://localhost:11434/
+ollama.model=llama3.1
