--- a/pom.xml
+++ b/pom.xml
@@ -66,19 +66,24 @@
 
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
+		</dependency>
+
 	</dependencies>
-	<!--<dependencyManagement>
+	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.ai</groupId>
-				<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+				<artifactId>spring-ai-bom</artifactId>
 				<version>${spring-ai.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
--->
+
 	<build>
 		<plugins>
 			<plugin>
