--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-bean-definition-overriding=true
 spring.devtools.livereload.enabled=true
-spring.ai.openai.api-key =${OPEN_AI_API_KEY}
+
+
+#spring.ai.ollama.chat.options.model=deepseek-r1:8b
+spring.ai.ollama.chat.options.model=deepseek-r1:1.5b
+spring.ai.ollama.base-url=http://localhost:11434
+#spring.ai.ollama.base-url=http://localhost:11434
+
+server.port=8080
+#server.port=8080
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
