--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ springdoc.api-docs.path=/v3/api-docs
 
 spring.security.user.name=user
 spring.security.user.password=pass
+
+spring.main.allow-circular-references = true
