--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.security.user.name=user
 spring.security.user.password=pass
 
 spring.main.allow-circular-references = true
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
