--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=LanguageLearningPlatform
 
-spring.datasource.url=jdbc:mysql://localhost:3306/languageplatform
+spring.datasource.url=jdbc:mysql://localhost:3306/languageplatform?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
