--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,15 @@ spring.devtools.livereload.enabled=true
 
 
 #spring.ai.ollama.chat.options.model=deepseek-r1:7b
-spring.ai.ollama.chat.options.model=dorian2b/vera:latest
+#spring.ai.ollama.chat.options.model=dorian2b/vera:latest
 #spring.ai.ollama.chat.options.model=lauchacarro/qwen2.5-translator:latest
 #spring.ai.ollama.chat.options.model=deepseek-r1:1.5b
-spring.ai.ollama.base-url=http://localhost:11434
+#spring.ai.ollama.base-url=http://localhost:11434
 
 server.port=8080
 #server.port=8080
+
+gemini.api.key=${GEMINI_API_KEY}
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
